Revert "add toc plugin to auto generate toc"
github pages seems not support additional plugin

This reverts commit 2b99757904dc46468696b06e8019bed85172fb5f.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    {{ content | toc }}
+    {{ content }}
   </div>
 
   {%- if site.disqus.shortname -%}
