use config to load tencent analytics script

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,7 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="anonymous"></script>
+  {%- if jekyll.environment == 'production' and site.tencent_analytics -%}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="anonymous"></script>
+  {%- endif -%}
 </head>
