--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,4 +33,7 @@
   </div>
 
 </footer>
-<script type="text/javascript" src="http://tajs.qq.com/stats?sId=66171907" charset="UTF-8"></script>
+
+{%- if jekyll.environment == 'production' and site.tencent_analytics -%}
+  <script type="text/javascript" src="http://tajs.qq.com/stats?sId=66171907" charset="UTF-8"></script>
+{%- endif -%}
