--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,6 +34,6 @@
 
 </footer>
 
-{%- if jekyll.environment == 'production' and site.tencent_analytics -%}
+{%- if jekyll.environment == 'production' and site.tencent_analytics == 1 -%}
   <script type="text/javascript" src="http://tajs.qq.com/stats?sId=66171907" charset="UTF-8"></script>
 {%- endif -%}
