增加百度统计修改文章

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,5 +35,16 @@
 </footer>
 
 {%- if jekyll.environment == 'production' and site.tencent_analytics == 1 -%}
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?316d75cc6a962be9c568c922f781b198";
+  var s =
+</script>
+ document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+
   <script type="text/javascript" src="http://tajs.qq.com/stats?sId=66171907" charset="UTF-8"></script>
 {%- endif -%}
