feat: 增加valine评论系统

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {%- include head.html -%}
-  <body>
+{%- include head.html -%}
+<body>
 
-    {%- include header.html -%}
+  {%- include header.html -%}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+  <main class="page-content" aria-label="Content">
+    <div class="wrapper">
+      {{ content }}
+    </div>
+  </main>
 
-    {%- include footer.html -%}
+  {% if site.data.social.valine_comment.enable and page.comments == true %}
+  <div id="comments"></div>
+  {% endif %}
+  {% include scripts.html %}
+ 
+  {%- include footer.html -%}
 
-  </body>
+</body>
 
 </html>
