--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     </div>
   </main>
 
-  {% if site.data.social.valine_comment.enable %}
+  {% if site.data.social.valine_comment.enable and page.comments == true %}
   <span id="{{ page.url }}" class="leancloud_visitors" data-flag-title="{{ site.title }}">
     <em class="post-meta-item-text">阅读量</em>
     <i class="leancloud-visitors-count">-</i>
