--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,5 +43,10 @@ layout: default
     {{ content }}
   </div>
 
+  {% if site.data.social.valine_comment.enable and page.comments == true %}
+  <div id="comments"></div>
+  {% include valine_comments.html %}
+  {% endif %}
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
