feat: add favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,14 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
 
+  <!-- Favicon-->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
   <!-- Valine Comment -->
   {% if site.data.social.valine_comment.enable and page.comments == true %}
   <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
