feat: 使用自己的cdn配置，主要是修改头像昵称

--- a/layouts/partials/init.html
+++ b/layouts/partials/init.html
@@ -9,7 +9,13 @@
         {{- $cdn = dict "simpleIconsPrefix" $cdnData.prefix.simpleIcons -}}
         {{- $prefix := $cdnData.prefix.libFiles | default "" -}}
         {{- range $key, $value := $cdnData.libFiles -}}
-            {{- $cdn = printf "%v%v" $prefix $value | dict $key | merge $cdn -}}
+            {{- if or (hasPrefix $value "http://") (hasPrefix $value "https://") -}}
+                {{- /* 如果 $value 是完整的 URL，则直接使用 */ -}}
+                {{- $cdn = dict $key $value | merge $cdn -}}
+            {{- else -}}
+                {{- /* 否则拼接公共前缀和文件路径 */ -}}
+                {{- $cdn = printf "%v%v" $prefix $value | dict $key | merge $cdn -}}
+            {{- end -}}
         {{- end -}}
     {{- end -}}
     {{- .Scratch.Set "cdn" $cdn -}}
