--- a/layouts/partials/comment.html
+++ b/layouts/partials/comment.html
@@ -51,6 +51,12 @@
             {{- with $valine.serverURLs -}}
                 {{- $commentConfig = dict "serverURLs" . | dict "valine" | merge $commentConfig -}}
             {{- end -}}
+			{{- with $valine.requiredFields -}}
+    			{{- $commentConfig = dict "requiredFields" . | dict "valine" | merge $commentConfig -}}
+			{{- end -}}
+			{{- with $valine.avatar_cdn -}}
+    			{{- $commentConfig = dict "avatar_cdn" . | dict "valine" | merge $commentConfig -}}
+			{{- end -}}
             {{- $commentConfig = $valine.emoji | default "google.yml" | printf "lib/valine/emoji/%v" | resources.Get | transform.Unmarshal | dict "valine" | merge $commentConfig -}}
             <noscript>
                 Please enable JavaScript to view the comments powered by <a href="https://valine.js.org/">Valine</a>.
